# eagine-shapes

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.rst
config/: EAGinePackageShapes.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in
doc/doxygen/include/: shapes.hpp
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt
example/: CMakeLists.txt
example/eagine/: CMakeLists.txt  deb-changelog  for_each_triangle.cpp  shape_from_url.cpp  shape_topology.cpp
include/: CMakeLists.txt  Sources.cmake
include/eagine/shapes/: adjacency.hpp  adjacency.inl  array.hpp  array.inl  cached.hpp  cached.inl  centered.hpp  centered.inl  combined.hpp  combined.inl  cube.hpp  cube.inl  delegated.hpp  drawing.hpp  from_json.hpp  from_json.inl  gen_base.hpp  gen_base.inl  gen_capabilities.hpp  generator.hpp  generator.inl  icosahedron.hpp  icosahedron.inl  occluded.hpp  occluded.inl  plane.hpp  plane.inl  reboxed.hpp  reboxed.inl  round_cube.hpp  round_cube.inl  scaled.hpp  scaled.inl  scaled_wrap_coords.hpp  scaled_wrap_coords.inl  screen.hpp  screen.inl  skybox.hpp  skybox.inl  sphere.hpp  (+22 more)
include/eagine/shapes/config/: basic.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  deb-changelog
source/app/add_adjacency/: CMakeLists.txt  main.cpp
source/app/add_occlusion/: CMakeLists.txt  main.cpp
source/app/add_primitive_info/: CMakeLists.txt  main.cpp
source/app/to_json/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt  adjacency.cpp  base.cpp  cube.cpp  epilogue.inl  from_json.cpp  icosahedron.cpp  implement.inl  modifiers.cpp  plane.cpp  prologue.inl  round_cube.cpp  sphere.cpp  surface_points.cpp  tetrahedrons.cpp  to_json.cpp  to_patches.cpp  to_quads.cpp  topology.cpp  torus.cpp  twisted_torus.cpp  value_tree.cpp
source/modules/eagine/: CMakeLists.txt  adjacency.cpp  adjacency_impl.cpp  array.cpp  array_impl.cpp  cached.cpp  cached_impl.cpp  centered.cpp  centered_impl.cpp  combined.cpp  combined_impl.cpp  cube.cpp  cube_impl.cpp  deb-changelog  delegated.cpp  delegated_impl.cpp  drawing.cpp  drawing_impl.cpp  from_json.cpp  from_json_impl.cpp  generator.cpp  generator_capabilities.cpp  generator_capabilities_test.cpp  generator_impl.cpp  icosahedron.cpp  icosahedron_impl.cpp  models_test.cpp  occluded.cpp  occluded_impl.cpp  plane.cpp  plane_impl.cpp  plane_test.cpp  primitive_info.cpp  primitive_info_impl.cpp  reboxed.cpp  reboxed_impl.cpp  round_cube.cpp  round_cube_impl.cpp  scaled.cpp  scaled_impl.cpp  (+35 more)
source/modules/eagine/resources/: cube.json  spikosahedron.json
submodules/: CMakeLists.txt
